# synthetic-data-resume-coach

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  synthetic_data_resume_coach.md
.github/workflows/: ci.yml
data/: iteration_log.jsonl  pipeline_summary_20260501_000527.json  pipeline_summary_20260501_001125.json  pipeline_summary_20260501_001509.json  pipeline_summary_20260501_001741.json  pipeline_summary_20260501_002232.json  pipeline_summary_20260501_002340.json  pipeline_summary_20260501_101026.json  pipeline_summary_20260501_101231.json  pipeline_summary_20260501_101436.json  pipeline_summary_20260501_165322.json  pipeline_summary_20260502_075406.json  pipeline_summary_20260528_185335.json  pipeline_summary_20260603_235036.json
data/correction_test/: iteration_log.jsonl  pipeline_summary_20260602_232545.json
data/labeled/: failed_pairs_20260501_001509.jsonl  failed_pairs_20260501_002340.jsonl  failed_pairs_20260501_165322.jsonl  failed_pairs_20260502_075406.jsonl  failed_pairs_20260528_185335.jsonl  failed_pairs_20260603_235036.jsonl  failure_labels_20260501_001125.jsonl  failure_labels_20260501_001509.jsonl  failure_labels_20260501_002340.jsonl  failure_labels_20260501_165322.jsonl  failure_labels_20260502_075406.jsonl  failure_labels_20260528_185335.jsonl  failure_labels_20260603_235036.jsonl
docs/: blog_post.md  correction_loop_proof.md  engineering.md  evidence.md  failures.md  iteration_log.md  setup.md  spot_check.md  tradeoffs.md
src/: README.md  __init__.py  config.py  generators.py  main.py  phase1_generation.py  phase2_validation.py  phase3_labeling.py  phase4_correction.py  phase5_eval.py  pipeline.py  prompts.py  schema.py
src/analysis/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py  test_eval_quality.py  test_pipeline.py
(+31 files in other folders)
